# mowen

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  map.pgm  map.yaml
docker/: Dockerfile  container.sh  docker-compose.yml
docs/: Bug修复记录.md  Mowen_Gazebo仿真完整教程.md  启动命令参考.md  规划文档.md
install/: local_setup.sh  setup.sh
install/mowen_cartographer/share/mowen_cartographer/: package.bash  package.zsh
install/mowen_navigation/share/mowen_navigation/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mowen_navigation/share/mowen_navigation/cmake/: mowen_navigationConfig.cmake
install/mowen_navigation/share/mowen_navigation/config/: nav2_params.yaml
install/mowen_navigation/share/mowen_navigation/launch/: navigation.launch.py
log/: latest_build
src/mowen_cartographer/: CMakeLists.txt  package.xml
src/mowen_cartographer/config/: mowen_lds_2d.lua
src/mowen_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
src/mowen_cartographer/rviz/: mowen_cartographer.rviz
src/mowen_gazebo/: CMakeLists.txt  package.xml
src/mowen_gazebo/launch/: empty_world.launch.py  mowen_world.launch.py  robot_state_publisher.launch.py  spawn_mowen.launch.py
src/mowen_gazebo/models/mowen/: model.config  model.sdf
src/mowen_gazebo/models/mowen_common/: model.config
src/mowen_gazebo/rviz/: mowen_gazebo.rviz
src/mowen_gazebo/urdf/: mowen.urdf
src/mowen_gazebo/worlds/: empty_world.world  mowen_world.world
src/mowen_navigation/: CMakeLists.txt
src/mowen_navigation/config/: nav2_params.yaml
(+2 files in other folders)
